# Kaeda

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASE.md
.github/workflows/: ci.yml  deploy-website.yml  release.yml
.srt-miner/: frequency.txt
app/: index.html  package.json  pnpm-lock.yaml
app/src/: App.jsx  style.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: dto.rs  error.rs  lib.rs  main.rs  video_server.rs
app/src-tauri/src/translation/: deepl.rs  mod.rs
app/src/components/: VideoPane.jsx
app/tests/: smoke-test.js
core/: Cargo.toml
core/src/: deck.rs  embedded_subtitles.rs  ffmpeg.rs  ffmpeg_subtitles.rs  lib.rs  session.rs  subtitle.rs  util.rs
core/src/dictionary/: api.rs  db.rs  mod.rs
core/src/expression/: mod.rs
core/src/filter/: mod.rs
core/src/parser/: srt.rs
core/src/store/: mod.rs
core/src/tokenizer/: korean.rs  mod.rs
docs/: quickstart.md
scripts/: build_linux.sh  build_macos.sh  build_release.sh  build_windows.bat  test_release.sh
src/: app.rs  lib.rs  main.rs
src/dictionary/: api.rs  db.rs
src/filter/: mod.rs
src/parser/: srt.rs
src/store/: mod.rs
src/tokenizer/: korean.rs  mod.rs
src/ui/: candidate_pane.rs  definition_pane.rs  menu.rs  mod.rs  source_pane.rs
tests/: integration_test.rs
tests/fixtures/: Oldboy.2003.REMASTERED.KOREAN.720p.BluRay.H264.AAC-VXT-ko.srt  dict_sample.tsv  sample.srt  sample_full.srt  sample_malformed.srt
website/: changelog.html  index.html  quickstart.html  release.json
