[package]
name = "lantern"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
dirs = "6"
chrono = "0.4"
ratatui = "0.30.0"
crossterm = "0.29.0"
lindera = "3.0.7"
lindera-ko-dic = { version = "3.0.7", features = ["embed-ko-dic"] }
rusqlite = "0.39.0"
