[workspace]
resolver = "2"
members = ["core", "app/src-tauri"]
default-members = ["."]

[package]
name = "kaeda"
version = "0.2.0"
edition = "2024"

[dependencies]
kaeda-core = { path = "core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
ratatui = "0.30.0"
crossterm = "0.29.0"
rusqlite = "0.39.0"
