[package]
name = "kaeda-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
chrono = "0.4"
lindera = "3.0.7"
lindera-ko-dic = { version = "3.0.7", features = ["embed-ko-dic"] }
# "bundled" compiles SQLite from source: Windows runners/user machines
# have no system sqlite3.lib, and it keeps the SQLite version uniform.
rusqlite = { version = "0.39.0", features = ["bundled"] }
ureq = "3"
# Links native FFmpeg (ffmpeg-sys-next); release builds must stay
# self-contained, so this is opt-in until app-side bundling is solved.
unbundle = { version = "5", optional = true }

[features]
embedded-subtitles = ["dep:unbundle"]
