[package]
name = "kaeda-app"
version = "0.1.0"
edition = "2024"

[lib]
name = "kaeda_app"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
kaeda-core = { path = "../../core" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
