[package]
name = "kaeda-app"
version = "0.1.0"
edition = "2024"

[lib]
name = "kaeda_app"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
kaeda-core = { path = "../../core" }
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = "3"
thiserror = "2"
rusqlite = "0.39.0"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
mockito = "1"
tokio = { version = "1", features = ["rt", "macros"] }
